test/language/spec/stages/valid/parallel_same_stage.topo
// Multiple operations at same stage (parallel)

namespace proc {
  public:
    void run();
    fn run {
      stage<1> opA();
      stage<1> opB();
      stage<2> merge();
    }

  protected:
    void opA();
    void opB();
    void merge();
}
